--- a/src/localization/engineering_reports_localization/es/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/es/designPsychrometrics.json
@@ -16,5 +16,15 @@
   "Outdoor Air Flow Rate": "Velocidad de flujo de aire exterior",
   "Percent Outdoor Air": "Porcentaje de aire exterior",
   "Air Specific Heat": "Calor específico del aire",
-  "Air Density": "Densidad del aire"
+  "Air Density": "Densidad del aire",
+  "Wet Bulb Temperature": "Temperatura húmeda",
+  "Atmospheric Pressure": "Presión atmosférica",
+  "Supply Fan Temperature Difference": "Diferencia de temperatura de ventilador de suministro",
+  "Dew Point Temperature": "Temperatura de punto de rocío",
+  "Relative Humidity": "Humedad relativa",
+  "Enthalpy": "Entalpía",
+  "Specific Heat": "Calor específico",
+  "Density": "Densidad",
+  "Specific Volume": "Volumen específico",
+  "Summary": "Resumen"
 }
