--- a/src/localization/engineering_reports_localization/it/systemLoadSummary.json
+++ b/src/localization/engineering_reports_localization/it/systemLoadSummary.json
@@ -34,13 +34,13 @@
   "Cooling": "Raffreddamento",
   "Heating": "Riscaldamento",
   "Cooling Load Components": "Componenti carico di raffreddamento",
-  "Heating Load Components": "Componenti del carico di riscaldamento",
+  "Heating Load Components": "Componenti carico di riscaldamento",
   "Conduction": "Conduzione",
   "Solar": "Solare",
   "Outdoor Air": "Aria esterna",
   "Other": "Altro",
   "Conditions at Time of Peak": "Condizioni al momento del picco",
-  "Time at Peak": "Tempo al picco",
+  "Time at Peak": "Momento del picco",
   "DB": "DB",
   "HR": "HR",
   "WB": "WB",
