--- a/src/localization/engineering_reports_localization/it/zoneLoadSummary.json
+++ b/src/localization/engineering_reports_localization/it/zoneLoadSummary.json
@@ -34,7 +34,7 @@
   "Cooling": "Raffreddamento",
   "Heating": "Riscaldamento",
   "Cooling Load Components": "Componenti carico di raffreddamento",
-  "Heating Load Components": "Componenti del carico di riscaldamento",
+  "Heating Load Components": "Componenti carico di riscaldamento",
   "Conduction": "Conduzione",
   "Solar": "Solare",
   "Outdoor Air": "Aria esterna",
