--- a/src/localization/engineering_reports_localization/ru/systemLoadSummary.json
+++ b/src/localization/engineering_reports_localization/ru/systemLoadSummary.json
@@ -10,7 +10,7 @@
   "Partition": "Перегородка",
   "Other - Wall": "Другое — стена",
   "Exterior Floor": "Наружное перекрытие",
-  "Interior Floor": "Внутренне перекрытие",
+  "Interior Floor": "Внутреннее перекрытие",
   "Slab": "Перекрытие",
   "Other - Floor": "Другое — перекрытие",
   "Infiltration": "Инфильтрация",
@@ -53,7 +53,7 @@
   "Airflow per Floor Area": "Расход воздуха по площади помещения",
   "Airflow per Capacity": "Расход воздуха по пропускной способности",
   "Number of People": "Количество человек",
-  "Instant Sensible": "Ощутимая постоянная",
+  "Instant Sensible": "Ощутимая моментальная",
   "Delayed Sensible": "Ощутимая отсроченная",
   "Latent": "Скрытая",
   "Total": "Итого",
