--- a/src/localization/engineering_reports_localization/fr/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/fr/designPsychrometrics.json
@@ -16,5 +16,15 @@
   "Outdoor Air Flow Rate": "Débit d&apos;air extérieur",
   "Percent Outdoor Air": "Pourcentage d'air extérieur",
   "Air Specific Heat": "Chaleur spécifique à l'air",
-  "Air Density": "Densité de l'air"
+  "Air Density": "Densité de l'air",
+  "Wet Bulb Temperature": "Température de bulbe humide",
+  "Atmospheric Pressure": "Pression atmosphérique",
+  "Supply Fan Temperature Difference": "Différence de température du ventilateur d'alimentation",
+  "Dew Point Temperature": "Température de point de rosée",
+  "Relative Humidity": "Humidité relative",
+  "Enthalpy": "Enthalpie",
+  "Specific Heat": "Chaleur massique",
+  "Density": "Densité",
+  "Specific Volume": "Volume spécifique",
+  "Summary": "Récapitulatif"
 }
