--- a/src/localization/engineering_reports_localization/fr/units.json
+++ b/src/localization/engineering_reports_localization/fr/units.json
@@ -50,5 +50,9 @@
   "ton/ton": "tonne/tonne",
   "us_ton/us_ton": "us_ton/us_ton",
   "kg/kg": "kg/kg",
-  "lb/lb": "lb/lb"
+  "lb/lb": "lb/lb",
+  "kJ/kg": "kJ/kg",
+  "Btu/lb": "Btu/lb",
+  "m3/kg": "m3/kg",
+  "ft3/lb": "pi3/lb"
 }
