--- a/src/localization/engineering_reports_localization/ko/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/ko/designPsychrometrics.json
@@ -16,5 +16,15 @@
   "Outdoor Air Flow Rate": "실외 공기 유량",
   "Percent Outdoor Air": "실외 공기 퍼센트",
   "Air Specific Heat": "공기 비열",
-  "Air Density": "공기 밀도"
+  "Air Density": "공기 밀도",
+  "Wet Bulb Temperature": "습구 온도",
+  "Atmospheric Pressure": "기압",
+  "Supply Fan Temperature Difference": "공급 팬 온도 차이",
+  "Dew Point Temperature": "이슬점 온도",
+  "Relative Humidity": "상대 습도",
+  "Enthalpy": "엔탈피",
+  "Specific Heat": "비열",
+  "Density": "밀도",
+  "Specific Volume": "비체적",
+  "Summary": "요약"
 }
