--- a/src/localization/engineering_reports_localization/pl/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/pl/designPsychrometrics.json
@@ -16,5 +16,15 @@
   "Outdoor Air Flow Rate": "Przepływ powietrza zewnętrznego",
   "Percent Outdoor Air": "Procent powietrza zewnętrznego",
   "Air Specific Heat": "Ciepło właściwe powietrza",
-  "Air Density": "Gęstość powietrza"
+  "Air Density": "Gęstość powietrza",
+  "Wet Bulb Temperature": "Temperatura termometru wilgotnego",
+  "Atmospheric Pressure": "Ciśnienie atmosferyczne",
+  "Supply Fan Temperature Difference": "Różnica temperatury wentylatora nawiewowego",
+  "Dew Point Temperature": "Temperatura punktu rosy",
+  "Relative Humidity": "Wilgotność względna",
+  "Enthalpy": "Entalpia",
+  "Specific Heat": "Ciepło właściwe",
+  "Density": "Gęstość",
+  "Specific Volume": "Objętość właściwa",
+  "Summary": "Podsumowanie"
 }
