--- a/src/localization/engineering_reports_localization/ru/units.json
+++ b/src/localization/engineering_reports_localization/ru/units.json
@@ -21,25 +21,25 @@
   "l/s": "л/с",
   "gal(us)/hr": "гал (США)/ч",
   "gal(us)/min": "гал (США)/мин",
-  "J/g-C": "Дж/г-C",
-  "Btu/lb-F": "БТЕ/фунт-Ф",
-  "J/kg-C": "Дж/кг-C",
+  "J/g-C": "Дж/г·C",
+  "Btu/lb-F": "БТЕ/фунт·F",
+  "J/kg-C": "Дж/кг·C",
   "kg/m3": "кг/м3",
-  "lb/ft3": "фунт/фт3",
+  "lb/ft3": "фунт/фут3",
   "lb/in3": "фунт/дюйм3",
-  "W/ft2": "Вт/фт2",
+  "W/ft2": "Вт/фут2",
   "W/m2": "Вт/м2",
-  "Btu/hr-ft2": "БТЕ/ч-фт2",
+  "Btu/hr-ft2": "БТЕ/ч·фут2",
   "m2/W": "м2/Вт",
   "m2/kW": "м2/кВт",
   "ft2/ton": "фут2/тонна",
-  "ft2/kBtu-hr": "фут2/кБТЕ-ч",
-  "ft3/min-ft2": "фут3/мин-фт2",
-  "l/s-m2": "л/с-м2",
-  "m3/s-m2": "м3/с-м2",
-  "ft3/min-ton": "фут3/мин-тонна",
-  "l/s-kW": "л/с-кВт",
-  "m3/s-W": "м3/с-Вт",
+  "ft2/kBtu-hr": "фут2/кБТЕ·ч",
+  "ft3/min-ft2": "фут3/мин·фут2",
+  "l/s-m2": "л/с·м2",
+  "m3/s-m2": "м3/с·м2",
+  "ft3/min-ton": "фут3/мин·тонна",
+  "l/s-kW": "л/с·кВт",
+  "m3/s-W": "м3/с·Вт",
   "ft2": "фут2",
   "in2": "дюйм2",
   "m2": "м2",
@@ -50,5 +50,9 @@
   "ton/ton": "тонна/тонна",
   "us_ton/us_ton": "тонна_США/тонна_США",
   "kg/kg": "кг/кг",
-  "lb/lb": "фунт/фунт"
+  "lb/lb": "фунт/фунт",
+  "kJ/kg": "кДж/кг",
+  "Btu/lb": "БТЕ/фунт",
+  "m3/kg": "м3/кг",
+  "ft3/lb": "фут3/фунт"
 }
