--- a/src/localization/engineering_reports_localization/zh/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/zh/designPsychrometrics.json
@@ -16,5 +16,15 @@
   "Outdoor Air Flow Rate": "新风量",
   "Percent Outdoor Air": "新风百分比",
   "Air Specific Heat": "空气比热",
-  "Air Density": "空气密度"
+  "Air Density": "空气密度",
+  "Wet Bulb Temperature": "湿球温度",
+  "Atmospheric Pressure": "大气压力",
+  "Supply Fan Temperature Difference": "送风机温差",
+  "Dew Point Temperature": "露点温度",
+  "Relative Humidity": "相对湿度",
+  "Enthalpy": "焓",
+  "Specific Heat": "比热",
+  "Density": "密度",
+  "Specific Volume": "体积比容",
+  "Summary": "概要"
 }
