updated localization resources

--- a/src/localization/engineering_reports_localization/cs/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/cs/designPsychrometrics.json
@@ -7,7 +7,7 @@
   "Leaving Coil": "Výstup",
   "Supply Fan": "Přívodní ventilátor",
   "Dry Bulb Temperature": "Teplota suchého teploměru",
-  "Humidity Ratio": "Poměr vlhkosti",
+  "Humidity Ratio": "Měrná vlhkost",
   "Temperature Difference": "Rozdíl teplot",
   "System Name": "Název systému",
   "Time of Peak": "Čas špičky",
