--- a/src/localization/engineering_reports_localization/cs/systemLoadSummary.json
+++ b/src/localization/engineering_reports_localization/cs/systemLoadSummary.json
@@ -42,7 +42,7 @@
   "Conditions at Time of Peak": "Podmínky v době špičky",
   "Time at Peak": "Doba trvání špičky",
   "DB": "Suchý teploměr",
-  "HR": "Poměr vlhkosti",
+  "HR": "Měrná vlhkost",
   "WB": "Mokrý teploměr",
   "Outside": "Vnější",
   "System Load Summary": "Souhrn systémového zatížení",
