--- a/src/localization/engineering_reports_localization/de/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/de/designPsychrometrics.json
@@ -15,7 +15,7 @@
   "Zone Space Sensible Load": "Zonenbereich - sensible Last",
   "Outdoor Air Flow Rate": "Außenluft-Massenstrom",
   "Percent Outdoor Air": "Außenluftanteil",
-  "Air Specific Heat": "Luft - Spezifische Wärme",
+  "Air Specific Heat": "Luft - Spezifische Wärmekapazität",
   "Air Density": "Luftdichte",
   "Wet Bulb Temperature": "Feuchtkugeltemperatur",
   "Atmospheric Pressure": "Atmosphärischer Druck",
@@ -23,7 +23,7 @@
   "Dew Point Temperature": "Taupunkttemperatur",
   "Relative Humidity": "Relative Luftfeuchtigkeit",
   "Enthalpy": "Enthalpie",
-  "Specific Heat": "Spezifische Wärme",
+  "Specific Heat": "Spezifische Wärmekapazität",
   "Density": "Dichte",
   "Specific Volume": "Spezifisches Volumen",
   "Summary": "Zusammenfassung",
