--- a/src/localization/engineering_reports_localization/fr/common.json
+++ b/src/localization/engineering_reports_localization/fr/common.json
@@ -1,5 +1,5 @@
 {
-  "Type to Filter": "Type à filtrer",
+  "Type to Filter": "Saisir pour filtrer",
   "Revit Systems Analysis - Loads Report": "Analyse des systèmes Revit - Rapport de charges",
   "Zone Load Summary": "Récapitulatif des charges de la zone",
   "System Load Summary": "Récapitulatif des charges du système",
