--- a/src/localization/engineering_reports_localization/fr/systemLoadSummary.json
+++ b/src/localization/engineering_reports_localization/fr/systemLoadSummary.json
@@ -20,21 +20,21 @@
   "Return Air - Lights": "Reprise - Lumières",
   "Equipment": "Équipement",
   "Zone Ventilation": "Ventilation de zone",
-  "Transfer Air": "Air transmis",
-  "DOAS Direct to Zone": "DOAS directement sur la zone",
+  "Transfer Air": "Transfert d'air",
+  "DOAS Direct to Zone": "Système dédié à l'air extérieur (SDAE) sur zone",
   "Return Air - Other": "Reprise - Autre",
   "Power Generation Equipment": "Équipement de production d'énergie",
   "Refrigeration": "Réfrigération",
   "Water Use Equipment": "Équipement d'alimentation en eau",
-  "HVAC Equipment Loss": "Perte d'équipement HVAC",
+  "HVAC Equipment Loss": "Perte d'équipement CVC",
   "Sizing Factor Adjustment": "Ajustement du facteur de dimensionnement",
   "Time Delay Correction": "Correction du délai d'attente",
   "Grand Total": "Total général",
-  "Peak Loads": "Pic de charge",
-  "Cooling": "Refroidissement",
+  "Peak Loads": "Pic de charges",
+  "Cooling": "Refroid.",
   "Heating": "Chauffage",
-  "Cooling Load Components": "Composants de charge de refroidissement",
-  "Heating Load Components": "Composants de charge de chauffage",
+  "Cooling Load Components": "Répartion des charges de refroidissement",
+  "Heating Load Components": "Répartion des charges de chauffage",
   "Conduction": "Conduction",
   "Solar": "Solaire",
   "Outdoor Air": "Air extérieur",
@@ -59,7 +59,7 @@
   "Total": "Total",
   "Percent of Total": "Pourcentage du total",
   "Envelope": "Enveloppe",
-  "Internal Gains": "Gains internes",
+  "Internal Gains": "Apports internes",
   "Systems": "Systèmes",
   "Supply Fan Heat": "Chaleur du ventilateur d'alimentation",
   "Temperatures": "Températures",
