--- a/src/localization/engineering_reports_localization/fr/units.json
+++ b/src/localization/engineering_reports_localization/fr/units.json
@@ -13,7 +13,7 @@
   "ton(us)": "tonne(us)",
   "lb": "lb",
   "ft3/hr": "pi3/h",
-  "ft3/min": "ft3/min",
+  "ft3/min": "pi3/min",
   "m3/hr": "m3/h",
   "m3/s": "m3/s",
   "l/hr": "l/h",
@@ -25,22 +25,22 @@
   "Btu/lb-F": "Btu/lb-F",
   "J/kg-C": "J/kg-C",
   "kg/m3": "kg/m3",
-  "lb/ft3": "lb/ft3",
+  "lb/ft3": "lb/pi3",
   "lb/in3": "lb/po3",
-  "W/ft2": "W/ft2",
+  "W/ft2": "W/pi2",
   "W/m2": "W/m2",
-  "Btu/hr-ft2": "Btu/h-ft2",
+  "Btu/hr-ft2": "Btu/h-pi2",
   "m2/W": "m2/W",
   "m2/kW": "m2/kW",
-  "ft2/ton": "ft2/tonne",
-  "ft2/kBtu-hr": "ft2/kBtu-h",
-  "ft3/min-ft2": "ft3/min-ft2",
+  "ft2/ton": "pi2/tonne",
+  "ft2/kBtu-hr": "pi2/kBtu-h",
+  "ft3/min-ft2": "pi3/min-pi2",
   "l/s-m2": "l/s-m2",
   "m3/s-m2": "m3/s-m2",
-  "ft3/min-ton": "ft3/min-tonne",
+  "ft3/min-ton": "pi3/min-tonne",
   "l/s-kW": "l/s-kW",
   "m3/s-W": "m3/s-W",
-  "ft2": "ft2",
+  "ft2": "pi2",
   "in2": "po2",
   "m2": "m2",
   "cm2": "cm2",
@@ -54,5 +54,5 @@
   "kJ/kg": "kJ/kg",
   "Btu/lb": "Btu/lb",
   "m3/kg": "m3/kg",
-  "ft3/lb": "ft3/lb"
+  "ft3/lb": "pi3/lb"
 }
