--- a/src/localization/engineering_reports_localization/it/systemLoadSummary.json
+++ b/src/localization/engineering_reports_localization/it/systemLoadSummary.json
@@ -31,7 +31,7 @@
   "Time Delay Correction": "Correzione ritardo",
   "Grand Total": "Totale generale",
   "Peak Loads": "Carichi di picco",
-  "Cooling": "Raffreddamento",
+  "Cooling": "Raffreddamen.",
   "Heating": "Riscaldamento",
   "Cooling Load Components": "Componenti carico di raffreddamento",
   "Heating Load Components": "Componenti carico di riscaldamento",
