--- a/src/localization/engineering_reports_localization/ja/common.json
+++ b/src/localization/engineering_reports_localization/ja/common.json
@@ -3,7 +3,7 @@
   "Revit Systems Analysis - Loads Report": "Revit のシステム解析 - 負荷レポート",
   "Zone Load Summary": "ゾーン負荷の概要",
   "System Load Summary": "システム負荷の概要",
-  "Design Psychrometrics": "湿り空気を設計",
+  "Design Psychrometrics": "湿り空気の設計",
   "PDF": "PDF",
   "Revit Units": "Revit の単位",
   "IP Units": "IP 単位",
