--- a/src/localization/engineering_reports_localization/ja/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/ja/designPsychrometrics.json
@@ -1,5 +1,5 @@
 {
-  "Design Psychrometrics": "湿り空気を設計",
+  "Design Psychrometrics": "湿り空気の設計",
   "Zone": "ゾーン",
   "Return Air": "還気",
   "Outdoor Air": "外気",
