--- a/src/localization/engineering_reports_localization/ko/zoneLoadSummary.json
+++ b/src/localization/engineering_reports_localization/ko/zoneLoadSummary.json
@@ -13,7 +13,7 @@
   "Interior Floor": "내부 바닥",
   "Slab": "슬래브",
   "Other - Floor": "기타 - 바닥",
-  "Infiltration": "통풍",
+  "Infiltration": "침입외기",
   "Subtotal": "소계",
   "People": "사람",
   "Lights": "조명",
@@ -27,10 +27,10 @@
   "Refrigeration": "냉장",
   "Water Use Equipment": "물 사용 장비",
   "HVAC Equipment Loss": "HVAC 장비 손실",
-  "Sizing Factor Adjustment": "크기 조정 계수 조정",
+  "Sizing Factor Adjustment": "크기 계수 조정",
   "Time Delay Correction": "시간 지연 수정",
   "Grand Total": "총계",
-  "Peak Loads": "최고 하중",
+  "Peak Loads": "최대 부하",
   "Cooling": "냉방",
   "Heating": "난방",
   "Cooling Load Components": "냉방 부하 구성요소",
@@ -41,9 +41,9 @@
   "Other": "기타",
   "Conditions at Time of Peak": "피크 시 조건",
   "Time at Peak": "피크 시",
-  "DB": "건구식",
-  "HR": "습도 비율",
-  "WB": "습구식",
+  "DB": "건구 온도",
+  "HR": "절대 습도",
+  "WB": "습구 온도",
   "Outside": "외부",
   "Zone": "구역",
   "Zone Load Summary": "구역 부하 요약",
@@ -59,9 +59,9 @@
   "Delayed Sensible": "지연 현열",
   "Latent": "잠열",
   "Total": "합계",
-  "Percent of Total": "총 백분율",
+  "Percent of Total": "백분율",
   "Envelope": "외부",
-  "Internal Gains": "내부 증가",
+  "Internal Gains": "실내 획득",
   "Systems": "시스템",
   "No zones found": "구역을 찾을 수 없음"
 }
