--- a/src/localization/engineering_reports_localization/pl/common.json
+++ b/src/localization/engineering_reports_localization/pl/common.json
@@ -3,7 +3,7 @@
   "Revit Systems Analysis - Loads Report": "Analiza systemów Revit — Raport obciążeń",
   "Zone Load Summary": "Podsumowanie obciążenia strefy",
   "System Load Summary": "Podsumowanie obciążenia systemu",
-  "Design Psychrometrics": "Psychrometria projektu",
+  "Design Psychrometrics": "Wykres psychometryczny",
   "PDF": "PDF",
   "Revit Units": "Jednostki programu Revit",
   "IP Units": "Jednostki IP",
