--- a/src/localization/engineering_reports_localization/pl/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/pl/designPsychrometrics.json
@@ -1,5 +1,5 @@
 {
-  "Design Psychrometrics": "Psychrometria projektu",
+  "Design Psychrometrics": "Wykres psychometryczny",
   "Zone": "Strefa",
   "Return Air": "Powietrze recyrkulacyjne",
   "Outdoor Air": "Powietrze zewnętrzne",
