--- a/src/localization/engineering_reports_localization/pl/systemLoadSummary.json
+++ b/src/localization/engineering_reports_localization/pl/systemLoadSummary.json
@@ -46,7 +46,7 @@
   "WB": "Temperatura termometru wilgotnego",
   "Outside": "Na zewnątrz",
   "System Load Summary": "Podsumowanie obciążenia systemu",
-  "Engineering Checks": "Kontrole inżynierskie",
+  "Engineering Checks": "Dane kontrolne",
   "Capacity per Floor Area": "Pojemność na powierzchnię stropu",
   "Floor Area per Capacity": "Powierzchnia stropu na pojemność",
   "Outdoor Air Percentage": "Procent powietrza zewnętrznego",
