--- a/src/localization/engineering_reports_localization/pl/zoneLoadSummary.json
+++ b/src/localization/engineering_reports_localization/pl/zoneLoadSummary.json
@@ -48,7 +48,7 @@
   "Zone": "Strefa",
   "Zone Load Summary": "Podsumowanie obciążenia strefy",
   "RH": "Wilgotność względna",
-  "Engineering Checks": "Kontrole inżynierskie",
+  "Engineering Checks": "Dane kontrolne",
   "Capacity per Floor Area": "Pojemność na powierzchnię stropu",
   "Floor Area per Capacity": "Powierzchnia stropu na pojemność",
   "Outdoor Air Percentage": "Procent powietrza zewnętrznego",
