--- a/src/localization/engineering_reports_localization/de/zoneLoadSummary.json
+++ b/src/localization/engineering_reports_localization/de/zoneLoadSummary.json
@@ -18,12 +18,12 @@
   "People": "Personen",
   "Lights": "Lichtquellen",
   "Return Air - Lights": "Abluftleuchten",
-  "Equipment": "Bauteile",
+  "Equipment": "Geräte",
   "Zone Ventilation": "Zonenbelüftung",
   "Transfer Air": "Nachströmung Luft",
   "DOAS Direct to Zone": "Außenluftsystem (direkt zu Zone)",
   "Return Air - Other": "Abluft - Sonstige",
-  "Power Generation Equipment": "Ausrüstung für Stromerzeugung",
+  "Power Generation Equipment": "Geräte für Stromerzeugung",
   "Refrigeration": "Kühlung",
   "Water Use Equipment": "Geräte mit Wasserverbrauch",
   "HVAC Equipment Loss": "Verluste HLK - Geräte",
