Updated FR localization content

--- a/src/localization/engineering_reports_localization/fr/common.json
+++ b/src/localization/engineering_reports_localization/fr/common.json
@@ -3,7 +3,7 @@
   "Revit Systems Analysis - Loads Report": "Analyse des systèmes Revit - Rapport de charges",
   "Zone Load Summary": "Récapitulatif des charges de la zone",
   "System Load Summary": "Récapitulatif des charges du système",
-  "Design Psychrometrics": "Conception psychrométrique",
+  "Design Psychrometrics": "Psychrométrie de la conception",
   "PDF": "PDF",
   "Revit Units": "Unités Revit",
   "IP Units": "Unités IP",
