--- a/src/localization/engineering_reports_localization/fr/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/fr/designPsychrometrics.json
@@ -1,5 +1,5 @@
 {
-  "Design Psychrometrics": "Conception psychrométrique",
+  "Design Psychrometrics": "Psychrométrie de la conception",
   "Zone": "Zone",
   "Return Air": "Reprise",
   "Outdoor Air": "Air extérieur",
@@ -11,21 +11,21 @@
   "Temperature Difference": "Différence de température",
   "System Name": "Nom du système",
   "Time of Peak": "Heure du pic",
-  "Coil Air Flow Rate": "Vitesse d'écoulement de l'air",
+  "Coil Air Flow Rate": "Débit d'air du serpentin",
   "Zone Space Sensible Load": "Apports sensibles (Espace, Zone)",
   "Outdoor Air Flow Rate": "Débit d'air extérieur",
   "Percent Outdoor Air": "Pourcentage d'air extérieur",
   "Air Specific Heat": "Chaleur spécifique à l'air",
   "Air Density": "Densité de l'air",
-  "Wet Bulb Temperature": "Température humide",
+  "Wet Bulb Temperature": "Température de bulbe humide",
   "Atmospheric Pressure": "Pression atmosphérique",
   "Supply Fan Temperature Difference": "Différence de température du ventilateur d'alimentation",
-  "Dew Point Temperature": "Température du point de rosée",
+  "Dew Point Temperature": "Température de rosée",
   "Relative Humidity": "Humidité relative",
   "Enthalpy": "Enthalpie",
-  "Specific Heat": "Chaleur spécifique",
+  "Specific Heat": "Chaleur massique",
   "Density": "Densité",
-  "Specific Volume": "Volume spécifique",
+  "Specific Volume": "Volume massique",
   "Summary": "Récapitulatif",
   "No system coils found": "Aucune bobine système trouvée"
 }
