--- a/src/localization/engineering_reports_localization/fr/zoneLoadSummary.json
+++ b/src/localization/engineering_reports_localization/fr/zoneLoadSummary.json
@@ -55,8 +55,8 @@
   "Airflow per Floor Area": "Écoulement d'air par surface au sol",
   "Airflow per Capacity": "Écoulement d'air par capacité",
   "Number of People": "Nombre de personnes",
-  "Instant Sensible": "Sensibilité perceptible",
-  "Delayed Sensible": "Retard perceptible",
+  "Instant Sensible": "Sensible immédiate",
+  "Delayed Sensible": "Sensible différée",
   "Latent": "Latente",
   "Total": "Total",
   "Percent of Total": "Pourcentage du total",
