update localization files with FR translations

--- a/src/localization/engineering_reports_localization/fr/designPsychrometrics.json
+++ b/src/localization/engineering_reports_localization/fr/designPsychrometrics.json
@@ -15,7 +15,7 @@
   "Zone Space Sensible Load": "Apports sensibles (Espace, Zone)",
   "Outdoor Air Flow Rate": "Débit d'air extérieur",
   "Percent Outdoor Air": "Pourcentage d'air extérieur",
-  "Air Specific Heat": "Chaleur spécifique à l'air",
+  "Air Specific Heat": "Chaleur massique de l'air",
   "Air Density": "Densité de l'air",
   "Wet Bulb Temperature": "Température de bulbe humide",
   "Atmospheric Pressure": "Pression atmosphérique",
