--- a/src/localization/engineering_reports_localization/fr/zoneLoadSummary.json
+++ b/src/localization/engineering_reports_localization/fr/zoneLoadSummary.json
@@ -33,8 +33,8 @@
   "Peak Loads": "Pic de charges",
   "Cooling": "Refroid.",
   "Heating": "Chauffage",
-  "Cooling Load Components": "Répartion des charges de refroidissement",
-  "Heating Load Components": "Répartion des charges de chauffage",
+  "Cooling Load Components": "Répartition des charges de refroidissement",
+  "Heating Load Components": "Répartition des charges de chauffage",
   "Conduction": "Conduction",
   "Solar": "Solaire",
   "Outdoor Air": "Air extérieur",
